更新テスト

--- a/copilot/example-app/src/html/index.html
+++ b/copilot/example-app/src/html/index.html
@@ -7,5 +7,6 @@
     <p>Express Sample Page.</p>
     <p>更新テスト</p>
     <p>http://sampl-publi-s7jztjtlikxu-527045616.ap-northeast-1.elb.amazonaws.com/</p>
+    <p>Pipeline更新テスト</p>
 </body>
 </html>
